// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobList: Component should render correctly 1`] = `
<styled.div>
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.jobList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Past Versions"
        id="dataSource.jobList.title"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "folderNavBtn",
          "label": <FormattedMessage
            defaultMessage="Pages"
            id="project.view.projectPages"
            values={Object {}}
          />,
          "to": "/project/1/folder",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.jobList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Past Versions"
        id="dataSource.jobList.title"
        values={Object {}}
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={true}
    noDataContent={null}
  >
    <RadioGroup
      customCheckedStyles={Object {}}
      customLabelStyles={Object {}}
      customStyles={
        Object {
          "flexDirection": "column",
        }
      }
      name="job_option_revert"
      onChange={[Function]}
    >
      <styled.div />
    </RadioGroup>
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      id="cancelBtn"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="dataSource.jobList.cancel"
        values={Object {}}
      />
    </BackButton>
    <NextButton
      disabled={true}
      id="revertBtn"
      loading={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Revert"
        id="dataSource.jobList.revert"
        values={Object {}}
      />
    </NextButton>
  </NavigationContainer>
</styled.div>
`;

exports[`JobList: Component should render correctly with list of jobs 1`] = `
<styled.div>
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.jobList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Past Versions"
        id="dataSource.jobList.title"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "folderNavBtn",
          "label": <FormattedMessage
            defaultMessage="Pages"
            id="project.view.projectPages"
            values={Object {}}
          />,
          "to": "/project/1/folder",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.jobList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Past Versions"
        id="dataSource.jobList.title"
        values={Object {}}
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <RadioGroup
      customCheckedStyles={Object {}}
      customLabelStyles={Object {}}
      customStyles={
        Object {
          "flexDirection": "column",
        }
      }
      name="job_option_revert"
      onChange={[Function]}
    >
      <styled.div>
        <styled.div
          key="0"
        >
          <styled.div>
            <Component
              id="job_option_revert-0"
              value={1}
            />
            <styled.label
              htmlFor="job_option_revert-0"
            >
              <styled.div>
                <Span>
                  Invalid Date
                </Span>
              </styled.div>
              <styled.div>
                <styled.div />
                <Span>
                  <FormattedMessage
                    defaultMessage="Success"
                    id="dataSource.jobList.success"
                    values={Object {}}
                  />
                </Span>
              </styled.div>
              <styled.div>
                <styled.div />
                <Span>
                  <FormattedMessage
                    defaultMessage="Original file"
                    id="dataSource.jobList.originalFile"
                    values={Object {}}
                  />
                </Span>
              </styled.div>
            </styled.label>
          </styled.div>
          <Styled(Component)
            onClick={[Function]}
          />
        </styled.div>
        <styled.div
          key="1"
        >
          <styled.div>
            <Component
              id="job_option_revert-1"
              value={2}
            />
            <styled.label
              htmlFor="job_option_revert-1"
            >
              <styled.div>
                <Span>
                  Invalid Date
                </Span>
              </styled.div>
              <styled.div>
                <styled.div />
                <Span>
                  <FormattedMessage
                    defaultMessage="Success"
                    id="dataSource.jobList.success"
                    values={Object {}}
                  />
                </Span>
              </styled.div>
              <styled.div>
                <styled.div />
                <Span>
                  <FormattedMessage
                    defaultMessage="{length} {length, plural,one {Step} other {Steps}}"
                    id="dataSource.jobList.steps"
                    values={
                      Object {
                        "length": 1,
                      }
                    }
                  />
                </Span>
              </styled.div>
            </styled.label>
          </styled.div>
          <Styled(Component)
            onClick={[Function]}
          />
        </styled.div>
        <styled.div
          key="2"
        >
          <styled.div>
            <Component
              id="job_option_revert-2"
              value={3}
            />
            <styled.label
              htmlFor="job_option_revert-2"
            >
              <styled.div>
                <Span>
                  Invalid Date
                </Span>
              </styled.div>
              <styled.div>
                <styled.div />
                <Span>
                  <FormattedMessage
                    defaultMessage="Failed"
                    id="dataSource.jobList.failure"
                    values={Object {}}
                  />
                </Span>
              </styled.div>
              <styled.div>
                <styled.div />
                <Span>
                  <FormattedMessage
                    defaultMessage="{length} {length, plural,one {Step} other {Steps}}"
                    id="dataSource.jobList.steps"
                    values={
                      Object {
                        "length": 1,
                      }
                    }
                  />
                </Span>
              </styled.div>
            </styled.label>
          </styled.div>
          <Styled(Component)
            onClick={[Function]}
          />
        </styled.div>
      </styled.div>
    </RadioGroup>
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      id="cancelBtn"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="dataSource.jobList.cancel"
        values={Object {}}
      />
    </BackButton>
    <NextButton
      disabled={true}
      id="revertBtn"
      loading={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Revert"
        id="dataSource.jobList.revert"
        values={Object {}}
      />
    </NextButton>
  </NavigationContainer>
</styled.div>
`;

exports[`JobList: Component should render correctly with no data 1`] = `
<styled.div>
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.jobList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Past Versions"
        id="dataSource.jobList.title"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "folderNavBtn",
          "label": <FormattedMessage
            defaultMessage="Pages"
            id="project.view.projectPages"
            values={Object {}}
          />,
          "to": "/project/1/folder",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.jobList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Past Versions"
        id="dataSource.jobList.title"
        values={Object {}}
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={true}
    noDataContent={null}
  >
    <RadioGroup
      customCheckedStyles={Object {}}
      customLabelStyles={Object {}}
      customStyles={
        Object {
          "flexDirection": "column",
        }
      }
      name="job_option_revert"
      onChange={[Function]}
    >
      <styled.div />
    </RadioGroup>
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      id="cancelBtn"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="dataSource.jobList.cancel"
        values={Object {}}
      />
    </BackButton>
    <NextButton
      disabled={true}
      id="revertBtn"
      loading={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Revert"
        id="dataSource.jobList.revert"
        values={Object {}}
      />
    </NextButton>
  </NavigationContainer>
</styled.div>
`;
